--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
     "name": "ecommerce-api",
     "version": "0.0.0",
     "private": true,
+    "engines": {
+        "node": "16.x"
+    },
     "scripts": {
         "start": "nodemon ./bin/www",
         "dev": "nodemon ./bin/www",
